--- a/src/AaxAudioConverter/ActivationCodeForm.de.resx
+++ b/src/AaxAudioConverter/ActivationCodeForm.de.resx
@@ -131,7 +131,7 @@
     <value>270, 163</value>
   </data>
   <data name="lblInfo.Text" xml:space="preserve">
-    <value>Der einfachste Weg, den Audible-Aktivierungscode zu erhalten, ist die Installation und Aktivierung von „Audible Manager“, oder, unter Windows 10, der "Audible App". Audible Manager bzw. App können von der Audible-Webseite unter Software heruntergeladen werden. Nach der Installation und Aktivierung von Audible Manager/App, d.h. der Verknüpfung mit dem eigenen Audible-Konto, sollte AaxAudioConverter den Aktivierungscode automatisch finden. 
+    <value>Der einfachste Weg, den Audible-Aktivierungscode zu erhalten, ist die Installation und Aktivierung der "Audible App" (Windows 10) oder des älteren „Audible Manager“. Die App kann von der Audible-Webseite unter Software heruntergeladen werden. Nach der Installation und Aktivierung von Audible App/Manager, d.h. der Verknüpfung mit dem eigenen Audible-Konto, sollte AaxAudioConverter den Aktivierungscode automatisch finden. 
 
 Falls bekannt, kann der Aktivierungscode hier auch manuell eingegeben werden.</value>
   </data>
