--- a/src/AaxAudioConverter/Properties/Resources.de.resx
+++ b/src/AaxAudioConverter/Properties/Resources.de.resx
@@ -402,4 +402,7 @@ ist zur Installation bereit.</value>
   <data name="LatestRtf" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\AaxAudioConverter.latest.de.rtf;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
+  <data name="MsgInvalidInternalFileType" xml:space="preserve">
+    <value>Tatsächliches Dateiformat ist nicht AAX oder AA.</value>
+  </data>
 </root>
